# axum-template

./: Cargo.toml  makefile
config/: http-server.toml  log4rs.yaml
scripts/: integration-testing.sh
src/cmd/: Cargo.toml
src/cmd/src/: server.rs
src/common/: Cargo.toml
src/common/src/: http_error.rs  http_response.rs  tools.rs
src/common/src/config/: mod.rs
src/server/: Cargo.toml
src/server/src/: lib.rs
src/server/src/auth/: mod.rs
src/server/src/handler/: login.rs  mod.rs  sample.rs
src/server/src/http/: auth.rs  handlers.rs  mod.rs  server.rs  state.rs
