[package]
name = "cmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "http-server"
path = "src/server.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
common.workspace = true
server.workspace = true
log.workspace = true
log4rs.workspace = true
thiserror.workspace = true
tokio.workspace = true
dashmap.workspace = true
