[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
log.workspace = true
log4rs.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
axum.workspace = true