[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
common.workspace = true
log.workspace = true
log4rs.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dashmap.workspace = true
axum.workspace = true
jsonwebtoken = "9.3.0"
